--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,6 @@
  bind p paste-buffer
  bind -t vi-copy v begin-selection
  bind -t vi-copy y copy-selection
+
+ #after copying to a tmux buffer, hit y again to copy to clipboard
+ bind y run "tmux save-buffer - | xclip -sel clip"
